@@ -28,7 +28,7 @@
 
 // 0x00 HI ME LO
 // 00   00 07 00
-#define COCOS2D_VERSION 0x00000603
+#define COCOS2D_VERSION 0x00000700
 
 //
 // all cocos2d include files
